--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -125,6 +125,25 @@
   year = {2003}
 }
 
+@article{efron_improvements_1997,
+  title = {Improvements on {{Cross-Validation}}: {{The}} .632+ {{Bootstrap Method}}},
+  volume = {92},
+  copyright = {Copyright \textcopyright{} 1997 American Statistical Association},
+  issn = {0162-1459},
+  shorttitle = {Improvements on {{Cross-Validation}}},
+  doi = {10.2307/2965703},
+  abstract = {A training set of data has been used to construct a rule for predicting future responses. What is the error rate of this rule? This is an important question both for comparing models and for assessing a final selected model. The traditional answer to this question is given by cross-validation. The cross-validation estimate of prediction error is nearly unbiased but can be highly variable. Here we discuss bootstrap estimates of prediction error, which can be thought of as smoothed versions of cross-validation. We show that a particular bootstrap method, the .632+ rule, substantially outperforms cross-validation in a catalog of 24 simulation experiments. Besides providing point estimates, we also consider estimating the variability of an error rate estimate. All of the results here are nonparametric and apply to any possible prediction rule; however, we study only classification problems with 0-1 loss in detail. Our simulations include "smooth" prediction rules like Fisher's linear discriminant function and unsmooth ones like nearest neighbors.},
+  timestamp = {2015-05-27T07:17:14Z},
+  number = {438},
+  urldate = {2015-05-27},
+  journal = {Journal of the American Statistical Association},
+  author = {Efron, Bradley and Tibshirani, Robert},
+  month = jun,
+  year = {1997},
+  pages = {548--560},
+  file = {Efron_Tibshirani_1997_Improvements on Cross-Validation.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/QR5QUGQ9/Efron_Tibshirani_1997_Improvements on Cross-Validation.pdf:application/pdf}
+}
+
 @article{srivastava_two_2013,
   title = {A two sample test in high dimensional data},
   volume = {114},
@@ -176,6 +195,25 @@
   keywords = {Cluster size control,fMRI,Multiple testing,MVPA,Second level analysis,Statistics},
   pages = {69--82},
   file = {Stelzer et al_2013_Statistical inference and multiple testing correction in classification-based.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/C9BKWQSA/Stelzer et al_2013_Statistical inference and multiple testing correction in classification-based.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2NGS4Q2G/S1053811912009810.html:text/html;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BX4T8DK8/S1053811912009810.html:text/html}
+}
+
+@article{arlot_survey_2010,
+  title = {A survey of cross-validation procedures for model selection},
+  volume = {4},
+  issn = {1935-7516},
+  doi = {10.1214/09-SS054},
+  abstract = {Used to estimate the risk of an estimator or to perform model selection, cross-validation is a widespread strategy because of its simplicity and its (apparent) universality. Many results exist on model selection performances of cross-validation procedures. This survey intends to relate these results to the most recent advances of model selection theory, with a particular emphasis on distinguishing empirical statements from rigorous theoretical results. As a conclusion, guidelines are provided for choosing the best cross-validation procedure according to the particular features of the problem in hand.},
+  language = {EN},
+  timestamp = {2015-12-27T10:07:01Z},
+  urldate = {2015-12-21},
+  journal = {Statistics Surveys},
+  author = {Arlot, Sylvain and Celisse, Alain},
+  year = {2010},
+  keywords = {cross-validation,leave-one-out,Model selection},
+  pages = {40--79},
+  file = {Arlot_Celisse_2010_A survey of cross-validation procedures for model selection.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/X5N3KUDP/Arlot_Celisse_2010_A survey of cross-validation procedures for model selection.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AHQ72DX9/1268143839.html:text/html},
+  mrnumber = {MR2602303},
+  zmnumber = {1190.62080}
 }
 
 @article{nadler_finite_2008,
@@ -390,6 +428,19 @@
   keywords = {Amygdala,Auditory Cortex,Functional Magnetic Resonance Imaging,Inferior prefrontal cortex,Superior temporal gyrus,Superior temporal sulcus,Voice},
   pages = {164--174},
   file = {Pernet et al_2015_The human voice areas.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K5P9IBIC/Pernet et al_2015_The human voice areas.pdf:application/pdf;Pernet et al_2015_The human voice areas.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TMDRCDKR/Pernet et al_2015_The human voice areas.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CPWNAN2U/S1053811915005558.html:text/html;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DUHB2G28/S1053811915005558.html:text/html}
+}
+
+@book{breiman_classification_1984,
+  title = {Classification and {{Regression Trees}}},
+  isbn = {978-0-412-04841-8},
+  abstract = {The methodology used to construct tree structured rules is the focus of this monograph. Unlike many other statistical procedures, which moved from pencil and paper to calculators, this text's use of trees was unthinkable before computers. Both the practical and theoretical sides have been developed in the authors' study of tree methods. Classification and Regression Trees reflects these two sides, covering the use of trees as a data analysis method, and in a more mathematical framework, proving some of their fundamental properties.},
+  language = {en},
+  timestamp = {2016-05-17T05:01:34Z},
+  publisher = {{Taylor \& Francis}},
+  author = {Breiman, Leo and Friedman, Jerome and Stone, Charles J. and Olshen, R. A.},
+  month = jan,
+  year = {1984},
+  keywords = {Mathematics / Probability \& Statistics / General,Mathematics / Probability \& Statistics / General,Psychology / Research \& Methodology,Psychology / Research \& Methodology}
 }
 
 @book{hastie_elements_2003,
@@ -956,7 +1007,7 @@ Results: A model-based approach is used to compare the ranking performances of r
   year = {2012},
   keywords = {High-dimensional response,Independence test,Multivariate data,Random vector},
   pages = {ass070},
-  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2SAUKDXJ/biomet.html:text/html}
+  file = {Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3GVUHNSW/Heller et al_2012_A consistent multivariate test of association based on ranks of distances.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2SAUKDXJ/biomet.html:text/html}
 }
 
 
