--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -463,16 +463,22 @@ We did not include this test in the battery we compared, but we note the followi
 (a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. This means that in the cases that the accuracy test is called upon for discriminating populations, it will probably be underpowered compared to location tests. 
 (b) In contrast with the underlying motivation of \cite{olivetti_induction_2012}'s independence test, we did not find that balancing the data folds is crucial for an accuracy test. 
 
-\cite{golland_permutation_2005} study accuracy tests using simulation, real neuroimaging and genetic data, a theoretical analysis of the concentration of the permutation p-value around.
-Their theoretical results formalize our intuition on the effect of the concentration of the permutatin p-value: 
+\cite{golland_permutation_2005} study accuracy tests using simulation, real neuroimaging and genetic data, and analytically.
+Their anaytic results formalize our intuition from Section~\ref{sec:introduction} on the effect concentration of the permutatin p-value:
 The finite Vapnik–Chervonenkis (VC) dimension requirement (Sec 4.3) prevents the permutation p-value from concentrating. 
-Their simualtion study shows that imbalance of the original data set may severely inflate the false alarm rates (Sec 3). 
-Like us, they find that if the original data set is balanced, then the resubstitution error (and also the leave-one-out), are very conservative. A fact we attribute to discretization and concentration. 
 They also find that the power decresases with the level of discretization of the statistic. 
 This is seen in their Figure~4, where the size of the test-set, $K$, governs the discretization. 
 Since they permute features, and not labels, then all their permutation samples conserve the same balance as the original one, and there is no issue of refolding. 
-\cite{golland_permutation_2005} also study the effect of the balance of the original data set, and find that if the original data set is highly unbalanced (governed by their $p$ parameter), then the permutation tests can severly inflate the false positive rates. We did not perform this analysis. 
-%TODO: how to permute?
+
+\cite{golland_permutation_2005} simulate the power of an accuracy test using a multivariate Gaussian mixture, with a parameter $p$ governing the separation between classes. 
+Under their model 
+$(x_i|y_i=1) \sim p \gauss{\mu_1,I}+ (1-p) \gauss{\mu_2,I}$ 
+and 
+$(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}$.
+Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
+We perform the same simulation as \cite{golland_permutation_2005}, after reparametrizing $p$ so that $p=0$ corresponds to the null model, and $p=23$ to be comparable to our other simulations.
+We find that in this mixture class of models, like the location class of models, a location test has more power than an accuracy test (Figure~\ref{fig:golland}).
+
 %TODO: why number of folds matters?
 %TODO: verify sensitivity to balance. 
 %TODO: simulate using the mixture of Golland. 
@@ -481,7 +487,8 @@ Since they permute features, and not labels, then all their permutation samples 
 \begin{figure}[ht]
 \centering
 	  \includegraphics[width=0.8\linewidth]{"art/2016-08-08 07:33:05"}
-	  \caption{\textbf{Mixture:} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.}
+	  \caption{\textbf{Mixture:} $\x_i = \chi_i \mu + \eta_i; \chi_i = \set{-1,1}$ and $\prob{\chi_i=1}=(1/2-p)^{\y^*_i}  (1/2+p)^{1-\y^*_i}$. $\mu$ is a $p$-vector with $3/\sqrt{p}$ in all coordinates.
+	  The effect, $p$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green tringle) and $1/2$ (blue square). }
 	\label{fig:golland}
 \end{figure}
 
