--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -186,7 +186,6 @@ For unbalanced data the chance level is the probability of the minority class, w
 This suggests the following test statistic $|\acc_{\hypEstim}-\minority|$.
 Since we will be aggregating these statistics over random data sets where $\minority$ may vary, it seems appropriate to standardize the scale of this statistic. 
 We thus also consider the z-scored accuracy: $|\acc_{\hypEstim}-\minority|/\sqrt{\minority(1-\minority)}$. 
-%TODO: fix all simulations to use minority probability!.
 
 
 
@@ -437,14 +436,12 @@ On the other hand, it increases the concentration of the accuracy statistic. Com
 \item The value of the tunning parameters of a classifier have little to no effect. 
 \end{enumerate}
 
-There are many ways of cross-validating. 
-A full review can be found in \cite{arlot_survey_2010}.
-Some may allow to recover some of the power lost due to discretization. 
-The discretness of the accuracy statisitc can be ``smoothed'' by cross validating with replacement. 
-Cross validation with replacement can be acheived, for instance, by the \emph{bootstrap}. 
-\cite{efron_improvements_1997} consider the bootstrap, and improvements, for unbiased risk estimation.
-For our purposes, since bias is not a concern, we can simply use the bootstrapped acucracy as our test statistic.
-%TODO: Bootstrap instead of V-fold. 
+It may be possible to alleviate the effect of discretizatin by appropriate cross-validation. 
+The discretness of the accuracy statisitc can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
+The \emph{bootstrap} may seem like a candidate approach, but since the original data always serves as a test set, the accuracy can still only assume $1/n$ values. 
+This is not the case, however, for the \emph{leave-one-out bootstrap estimator} \cite[Sec 7.11]{hastie_elements_2003}. 
+It is a simplified version of the \emph{0.632 bootstrap estimator} \citep{efron_improvements_1997}, and suffices for our purpose since we are not interested in unbiased risk estimation, but merely signal detection.
+As seen in Figure~\ref{fig:bootstrap}...  %TODO: bootstrap.
 
 \begin{figure}[ht]
 \centering
@@ -478,10 +475,7 @@ $(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}$.
 Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
 We perform the same simulation as \cite{golland_permutation_2005}, after reparametrizing $p$ so that $p=0$ corresponds to the null model, and $p=23$ to be comparable to our other simulations.
 We find that in this mixture class of models, like the location class of models, a location test has more power than an accuracy test (Figure~\ref{fig:golland}).
-
 %TODO: why number of folds matters?
-%TODO: verify sensitivity to balance. 
-%TODO: simulate using the mixture of Golland. 
 
 
 \begin{figure}[ht]
