--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -135,8 +135,8 @@ This number of examples is not unusual if considering this is the number of subj
 The discretization effect is aggravated if the test statistic is highly concentrated. 
 For an intuition consider the usage of a the \emph{resubstitution accuracy} as a test statistic. 
 This statistic simply means that the accuracy is not cross validated. 
-If the data is high dimensional, the resubstitution accuracy will be very high due to over fitting \cite[Thorem 1]{mclachlan_bias_1976}. 
-In an extreme case, the resubstitution accuracy will be $1$ for the observed data, but also for any permutation.
+If the data is high dimensional, the resubstitution accuracy will be very high due to over fitting. 
+In a very high dimensional model, the resubstitution accuracy will be $1$ for the observed data \cite[Thorem 1]{mclachlan_bias_1976}, but also for any permutation.
 The concentration of resubstitution accuracy near $1$, and its discreteness, render this test completely useless, with a power tending to $0$ as the dimension of the model grows. 
 
 
