--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -485,7 +485,7 @@ Their anaytic results formalize our intuition from Section~\ref{sec:introduction
 The finite Vapnik–Chervonenkis (VC) dimension requirement \citep[Sec 4.3]{golland_permutation_2003} prevents the permutation p-value from (asymptotically) concentrating. 
 They also find that the power decresases with the level of discretization of the statistic. 
 This is seen in their Figure~4, where the size of the test-set, $K$, governs the discretization. 
-Since they permute features, and not labels, then all their permutation samples conserve the same balance as the original one, and there is no issue of refolding. 
+Since they permute features, and not labels, then all their permutation samples are balanced, and there is no issue of refolding. 
 
 \cite{golland_permutation_2005} simulate the power of an accuracy test using a multivariate Gaussian mixture, with a parameter $p$ governing the separation between classes. 
 Under their model 
