--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -522,17 +522,14 @@ We find that in this mixture class of models, like the location class of models,
 Some reservations to the generality of our findings are in order. 
 Firstly, not all accuracy tests are concerned with signal detection.
 Indeed, it is possible that the purpose of the test is not to detect a difference between classes, but to actually test the performance of a particular classifier. 
-Examples include brain decoding for machine interfaces, and clinical diagnosis, where the presence of a medical condition is ``predicted'' from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
+Examples include brain decoding for machine interfaces, and clinical diagnosis, where the presence of a medical condition is predicted from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
 
 Secondly, it may be argued that accuracy tests permits the separation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors. 
-This is a false argument- accuracy test do not have any more flexibility that location tests. 
-Indeed, it is possible to test for location in the same dimesion the classifier is fitted. 
-\citet{gretton_kernel_2012-1} is an exaple where the test for location is performed in the RKHS of the data.
-It is also possible to test for the equality of two multivariate distributions without a-priori specifying any a-priori alternative \cite[e.g.][]{heller_consistent_2012}).
-
-Our focus on location tests is misleading. Perhaps \cite{simon_pitfalls_2003}'s \emph{class comparison} is a more appropriate name, in that it does not only imply a shift alternative. 
-Indeed, one may consider signal, i.e. effects, as a change in scale, such as the \emph{spiked covariance} model. 
-In this case, other-than-Hotelling type tests are appropriate.
+This is a false argument-- accuracy test do not have any more flexibility that location tests. 
+Indeed, it is possible to test for location in the same dimesion the classifier is learned. 
+\citet{gretton_kernel_2012-1} is an example where the test for location is performed in the RKHS of the data.
+It is also possible to test for the equality of two multivariate distributions without specifying any a-priori alternative \cite[e.g.][]{heller_consistent_2012}).
+By augmenting the feature space, $\chi$, any multivariate test can be cast as a location test, so that the nomenclature we chose does not restrict the type of multivaraite test. 
 
 The fact that in our neuroimaging example (Section~\ref{sec:example}) some brain regions were detected with the accuracy test, and not the location test, is consistent with this observation. 
 
