--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -529,11 +529,10 @@ This is a false argument-- accuracy test do not have any more flexibility that l
 Indeed, it is possible to test for location in the same dimesion the classifier is learned. 
 \citet{gretton_kernel_2012-1} is an example where the test for location is performed in the RKHS of the data.
 It is also possible to test for the equality of two multivariate distributions without specifying any a-priori alternative \cite[e.g.][]{heller_consistent_2012}).
-By augmenting the feature space, $\chi$, any multivariate test can be cast as a location test, so that the nomenclature we chose does not restrict the type of multivaraite test. 
 
-The fact that in our neuroimaging example (Section~\ref{sec:example}) some brain regions were detected with the accuracy test, and not the location test, is consistent with this observation. 
+By augmenting the feature space, $\chi$, any multivariate test can be cast as a location test, so that the our focus on \emph{location tests} does not restrict the type of multivaraite tests we advocate. 
+On the other hand, based on our reported neuroimaging example, and others, we find that a location test in the original feature space is indeed a simple and powerful approach to signal detection.
 
-The reservation to the reservation is that the far greater power of the location test, certainly in our example, does serve as en empirical evidence that changes in location are a prevalent phenomenon. 
 
 
 
