--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -442,6 +442,7 @@ The discretness of the accuracy statisitc can be ``smoothed'' by allowing the te
 The \emph{bootstrap} may seem like a candidate approach, but since the original data always serves as a test set, the accuracy can still only assume $1/n$ values. 
 This is not the case, however, for the \emph{leave-one-out bootstrap estimator} \cite[Sec 7.11]{hastie_elements_2003}. 
 It is a simplified version of the \emph{0.632 bootstrap estimator} \citep{efron_improvements_1997}, and suffices for our purpose since we are not interested in unbiased risk estimation, but merely signal detection.
+By the same rational, the degree of conservativism should decrease with the number of bootstrap samples. 
 The naming conventions of the bootstrapped estimates are detailed in Table~\ref{tab:collected_2}.
 As seen in Figure~\ref{fig:bootstrap}...  %TODO: bootstrap.
 
@@ -450,12 +451,12 @@ As seen in Figure~\ref{fig:bootstrap}...  %TODO: bootstrap.
 \begin{tcolorbox}
 \centering
 \begin{tabular}{l|c|c|c|c}
-Name & Basis & CV & Accuracy & Parameters\\ 
+Name & Basis & B & Accuracy & Parameters\\ 
 \hline
 \hline
-lda.Boot.1 & LDA & Bootstrap & accuracy &  -- \\ 
-svm.Boot.1 & SVM & Bootstrap & accuracy & cost=1e1 \\ 
-svm.Boot.2 & SVM & Bootstrap & accuracy & cost=1e-1 \\ 
+lda.Boot.1 & LDA & 50 & accuracy &  -- \\ 
+svm.Boot.1 & SVM & 50 & accuracy & cost=1e1 \\ 
+svm.Boot.2 & SVM & 50 & accuracy & cost=1e-1 \\ 
 \end{tabular} 
 \captionsetup{type=table}
 \caption{The same as Table~\ref{tab:collected} for bootstraped accuracy estimates. }
@@ -465,9 +466,8 @@ svm.Boot.2 & SVM & Bootstrap & accuracy & cost=1e-1 \\
 
 \begin{figure}[ht]
 \centering
-	  \missingfigure[figwidth=0.8\linewidth]{TODO:figure}
-%	  \includegraphics[width=0.8\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{\textbf{Bootstrap}}
+	  \includegraphics[width=0.8\linewidth]{"art/2016-08-09 06:07:12"}
+	  \caption{\textbf{Bootstrap:} } %TODO:caption
 	\label{fig:bootstrap}
 \end{figure}
 
