--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -94,7 +94,7 @@ This practice is also observed in very high profile publications in the genetics
 To fix ideas, we will adhere to a concrete example.
 In \cite{gilron_quantifying_2016}, the authors seek to detect brain regions which encode differences between vocal and non-vocal stimuli. 
 Following the MVPA workflow, the localization problem is cast as a supervised learning problem: if the type of the stimulus can be predicted from the spatial activation pattern significantly better than chance, then a region is declared to encode vocal/non-vocal information. 
-We call this an \emph{accuracy test}, a.k.a.\ \emph{class prediction} in \cite{simon_pitfalls_2003}, or \emph{pattern discrimination} in \cite{pereira_machine_2009}.
+We call this an \emph{accuracy test}, a.k.a.\ \emph{class prediction}, or \emph{pattern discrimination}.
 
 This same signal detection task can be also approached as a two-group multivariate test.
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
@@ -104,7 +104,8 @@ As put in \cite{pereira_machine_2009}:
 \end{quote}
 A practitioner may then call upon a two-group location test such as Hotelling's $T^2$ \citep{anderson_introduction_2003}.
 Alternatively, if the size of a brain region is too large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005} or \cite{srivastava_testing_2013}.
-For brevity, and in contrast to \emph{accuracy tests}, we will call these two-sample multivariate tests simply \emph{location tests}, also termed \emph{class comparisons} in \cite{simon_pitfalls_2003}.
+For brevity, and in contrast to \emph{accuracy tests}, we will call any two-sample multivariate tests simply \emph{location tests}, also termed \emph{class comparisons}. 
+
 
 At this point, it becomes unclear which is preferable: a location test or an accuracy test?
 The former with a heritage dating back to \cite{hotelling_generalization_1931}, and the latter being extremely popular, as the $959$ citations\footnote{GoogleScholar. Accessed on Aug 4, 2016.} of \cite{kriegeskorte_information-based_2006} suggest. 
@@ -531,15 +532,14 @@ We find that in this mixture class of models, like the location class of models,
 Some reservations to the generality of our findings are in order. 
 Firstly, not all accuracy tests are concerned with signal detection.
 Indeed, it is possible that the purpose of the test is not to detect a difference between classes, but to actually test the performance of a particular classifier. 
-Examples include brain decoding for machine interfaces, and clinical diagnosis, where the presence of a medical condition is predicted from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
+Put differently- classification is harder than detection, so that we may be able to detect a difference between classes, but not be able to classify examples significantly better than chance. 
+Examples of such problems include brain decoding for machine interfaces, and clinical diagnosis, where the presence of a medical condition is predicted from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
 
 Secondly, it may be argued that accuracy tests permits the separation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors. 
 This is a false argument-- accuracy test do not have any more flexibility that location tests. 
 Indeed, it is possible to test for location in the same dimesion the classifier is learned. 
 \citet{gretton_kernel_2012-1} is an example where the test for location is performed in the RKHS of the data.
 It is also possible to test for the equality of two multivariate distributions without specifying any a-priori alternative \cite[e.g.][]{heller_consistent_2012}).
-
-By augmenting the feature space, $\chi$, any multivariate test can be cast as a location test, so that the our focus on \emph{location tests} does not restrict the type of multivaraite tests we advocate. 
 On the other hand, based on our reported neuroimaging example, and others, we find that a location test in the original feature space is indeed a simple and powerful approach to signal detection.
 
 
