--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -442,11 +442,17 @@ On the other hand, it increases the concentration of the accuracy statistic. Com
 It may be possible to alleviate the effect of discretizatin by appropriate cross-validation. 
 The discretness of the accuracy statisitc can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
 The \emph{bootstrap} may seem like a candidate approach, but since the original data always serves as a test set, the accuracy can still only assume $1/n$ values. 
-This is not the case, however, for the \emph{leave-one-out bootstrap estimator} \cite[Sec 7.11]{hastie_elements_2003}. 
-It is a simplified version of the \emph{0.632 bootstrap estimator} \citep{efron_improvements_1997}, and suffices for our purpose since we are not interested in unbiased risk estimation, but merely signal detection.
+This is not the case, however, for the \emph{leave-one-out bootstrap estimator} (B-LOO) \cite[Sec 7.11]{hastie_elements_2003}. 
+It is a simplified version of the \emph{0.632 bootstrap estimator} (B-$0.632$)\citep{efron_improvements_1997}, and suffices for our purpose since we are not interested in unbiased risk estimation, but merely signal detection.
+%TODO: define the two bootstrap estimators. 
 By the same rational, the degree of conservativism should decrease with the number of bootstrap samples. 
 The naming conventions of the bootstrapped estimates are detailed in Table~\ref{tab:collected_2}.
-As seen in Figure~\ref{fig:bootstrap}...  %TODO: bootstrap.
+
+The simlation results are reported in Figure~\ref{fig:bootstrap}.
+It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation. 
+It can also be seen that power increases with the number of Bootstrap replications, itself reducing the level of discretization. 
+The type of Bootstrap, B-LOO versus B-$0.632$, does not change the power. 
+Again, consistent with the observation that it is discretization that drives the power loss. 
 
 \bigskip
 
@@ -456,15 +462,15 @@ As seen in Figure~\ref{fig:bootstrap}...  %TODO: bootstrap.
 Name & Basis & Boot Type & B & Accuracy & Parameters\\ 
 \hline
 \hline
-lda.Boot.1 & LDA & $0.632$ & 10 & accuracy &  -- \\ 
-lda.Boot.2 & LDA & LOOB & 10 & accuracy &  -- \\ 
-svm.Boot.1 & SVM & $0.632$ & 10 & accuracy & cost=1e1 \\ 
-svm.Boot.2 & SVM & LOOB & 10 & accuracy & cost=1e-1 \\ 
-svm.Boot.3 & SVM & $0.632$ & 10 & accuracy & cost=1e1 \\ 
-svm.Boot.4 & SVM & LOOB & 10 & accuracy & cost=1e-1 \\ 
+lda.Boot.1 & LDA & B-$0.632$ 	& 10 & accuracy &  -- \\ 
+lda.Boot.2 & LDA & B-LOO 	& 10 & accuracy &  -- \\ 
+svm.Boot.1 & SVM & B-$0.632$ 	& 10 & accuracy & cost=1e1 \\ 
+svm.Boot.2 & SVM & B-LOO 	& 10 & accuracy & cost=1e-1 \\ 
+svm.Boot.3 & SVM & B-$0.632$ 	& 50 & accuracy & cost=1e1 \\ 
+svm.Boot.4 & SVM & B-LOO 	& 50 & accuracy & cost=1e-1 \\ 
 \end{tabular} 
 \captionsetup{type=table}
-\caption{The same as Table~\ref{tab:collected} for bootstraped accuracy estimates. }
+\caption{The same as Table~\ref{tab:collected} for bootstraped accuracy estimates. } %TODO: caption. 
 \label{tab:collected_2}
 \end{tcolorbox}
 
