--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{todonotes}
 \usepackage{natbib}
@@ -15,17 +16,15 @@
 \usepackage{caption}
 \usepackage{hyperref}
 \AtBeginDocument{\let\textlabel\label}
-\hypersetup{
-    colorlinks=true,
-    linkcolor=black,
-    citecolor=black,
-    filecolor=black,
-    urlcolor=black,
-}
+\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 
 
 \captionsetup[figure]{labelfont=it,textfont={bf,it}}
 \captionsetup[subfigure]{width=0.8\hsize,labelfont=bf,textfont=footnotesize,singlelinecheck=off,justification=raggedright,format=hang}
+
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}
+
 
 
 \author{Jonathan Rosenblatt \and Roee Gilron \and Roy Mukamel}
@@ -159,7 +158,8 @@ In our vocal/non-vocal example we have $\outcomeS=\set{-1,1}$ and $p$, the numbe
 Given $n$ pairs of $(\features_i,\outcomes_i)$, typically assumed i.i.d., a location test amounts to testing whether $\features|\outcomes=1$ has the the same distribution as $\features|\outcomes=-1$. 
 I.e., we test if the multivariate voxel activation pattern has the same distribution when given a vocal stimulus, as when given a non-vocal stimulus. 
 An accuracy test amounts to learning a predictive model $\hypEstim(\features)$ from some assumed model class $\hypEstim \in \hypclass$. 
-The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probability of a given classifier $\hypEstim$ of making a correct prediction $\acc_{\hypEstim}:=\prob{\hypEstim(x)=y}$ when given a randomly drawn data point, ($\features,\outcomes$).
+The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probability of a given classifier $\hypEstim$ of making a correct prediction.
+Denoting by $I(A)$ the indicator function of the event $A$, we have $\acc_{\hypEstim}:=\expect{I(\hypEstim(x)=y)}$ when given a randomly drawn data point, ($\features,\outcomes$). 
 A statistically significant ``better than chance'' estimate of $\acc_{\hypEstim}$ is evidence that the classes are distinct. 
 
 
@@ -442,14 +442,28 @@ On the other hand, it increases the concentration of the accuracy statistic. Com
 It may be possible to alleviate the effect of discretizatin by appropriate cross-validation. 
 The discretness of the accuracy statisitc can be ``smoothed'' by allowing the test sample to be drawn with replacement. 
 The \emph{bootstrap} may seem like a candidate approach, but since the original data always serves as a test set, the accuracy can still only assume $1/n$ values. 
-This is not the case, however, for the \emph{leave-one-out bootstrap estimator} (B-LOO) \cite[Sec 7.11]{hastie_elements_2003}. 
-It is a simplified version of the \emph{0.632 bootstrap estimator} (B-$0.632$)\citep{efron_improvements_1997}, and suffices for our purpose since we are not interested in unbiased risk estimation, but merely signal detection.
+This is not the case, however, for the \emph{leave-one-out bootstrap estimator} (B-LOO) and the \emph{0.632 bootstrap estimator} (B-$0.632$) \citep[Sec 7.11]{hastie_elements_2003}, which we define below for completeness.
 %TODO: define the two bootstrap estimators. 
+%TODO: relate to terminology of Arlot and Celisse.
 By the same rational, the degree of conservativism should decrease with the number of bootstrap samples. 
 The naming conventions of the bootstrapped estimates are detailed in Table~\ref{tab:collected_2}.
 
+\begin{definition}[B-LOO]
+Denoting by $S^b$ the indexes of the test set of Bootstrap sample $b$, the \emph{leave-one-out} bootstrap estimate is defined as
+$$
+	\acc_{BLOO}:= \frac 1B \sum_{b=1}^{B} \frac{1}{|S^b|} \sum_{i\in S^b} I(\hypEstim^b(x_i)==y_i)
+$$
+\end{definition}
+
+\begin{definition}[B-$0.632$]
+Denoting by $\acc_{resub}$ the resubstitution accuracy estimate, the B-$0.632$ accuracy estimator, $\acc_{0.632}$, is defined as 
+$$
+	\acc_{0.632} := 0.368 \; \acc_{resub}  + 0.632 \acc_{BLOO}
+$$
+\end{definition}
+
 The simlation results are reported in Figure~\ref{fig:bootstrap}.
-It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation. 
+It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation, but still falls short from the power of location tests. 
 It can also be seen that power increases with the number of Bootstrap replications, itself reducing the level of discretization. 
 The type of Bootstrap, B-LOO versus B-$0.632$, does not change the power. 
 Again, consistent with the observation that it is discretization that drives the power loss. 
