--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -543,7 +543,7 @@ We find that in this mixture class of models, like the location class of models,
 \end{figure}
 
 
-
+%TODO: discuss \cite{stelzer_statistical_2013}
 
 
 
