--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -467,7 +467,7 @@ $$
 $$
 \end{definition}
 
-The naming conventions of the bootstrapped estimates are detailed in Table~\ref{tab:collected_2}, and the simlation results reported in Figure~\ref{fig:bootstrap}.
+The simlation results reported in Figure~\ref{fig:bootstrap}, with naming conventions in Table~\ref{tab:collected_2}.
 It can be seen that selecting test sets with replacement does increase the power, when compared to V-fold cross validation, but still falls short from the power of location tests. 
 It can also be seen that power increases with the number of Bootstrap replications, itself reducing the level of discretization. 
 The type of Bootstrap, B-LOO versus B-$0.632$, does not change the power. 
